LendersApp/src/objects/Application_Portal_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Business_Information_Help_Text__c</fullName>
        <label>Business Information Help Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Information_Help_Text__c</fullName>
        <label>Personal Information Help Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Site_URL__c</fullName>
        <label>Public Site URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_URL__c</fullName>
        <label>Return URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Submit_Help_Text__c</fullName>
        <label>Submit Help Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upload_Attachments_Help_Text__c</fullName>
        <label>Upload Attachments Help Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Application Portal Settings</label>
</CustomObject>